--- a/index.html
+++ b/index.html
@@ -54,12 +54,19 @@
 
 </script>
 <div class="d-flex flex-column align-items-start w-100">
-<a class="w-100" href="musicpay-music.vercel.app">
-<div class="tipo-musica p-2 d-flex justify-content-start align-items-center mb-4">
-<img style="height:5rem; width:5rem; border-radius:50%;" src="images/ab67616d0000b273deaeee5e480e1d5390e49e39.jpg"> <span>SERTANEJO</span>
+  <a class="w-100" href="https://musicpay-music.vercel.app">
+    <div class="tipo-musica p-2 d-flex justify-content-start align-items-center mb-4">
+      <img 
+        style="height:5rem; width:5rem; border-radius:50%;" 
+        src="images/ab67616d0000b273deaeee5e480e1d5390e49e39.jpg" 
+        alt="Imagem de Sertanejo">
+      <span>SERTANEJO</span>
+    </div>
+  </a>
+  <div class="d-flex justify-content-start align-items-center flex-column w-100">
+    <!-- Conteúdo adicional -->
+  </div>
 </div>
-</a>
-<div class="d-flex justify-content-start align-items-center flex-column w-100">
 
 
 </div>
