--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ src="https://www.facebook.com/tr?id=1894575097738251&ev=PageView&noscript=1"
         style="height:5rem; width:5rem; border-radius:50%;" 
         src="images/ab67616d0000b273deaeee5e480e1d5390e49e39.jpg" 
         alt="Imagem de Sertanejo">
-      <span>SERTANEJO</span>
+      <span>OUÇA OS LANÇAMENTOS</span>
     </div>
   </a>
   <div class="d-flex justify-content-start align-items-center flex-column w-100">
